force-app/main/default/objects/Booking__c/fields/DirectBookPhone__c.field-meta.xml
<CustomField>
    <fullName>DirectBookPhone__c</fullName>
    <label>DirectBook Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>