force-app/main/default/objects/Booking__c/fields/DirectBookPostalCode__c.field-meta.xml
<CustomField>
    <fullName>DirectBookPostalCode__c</fullName>
    <label>DirectBook Postal Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>