force-app/main/default/objects/Booking__c/fields/DirectBookState__c.field-meta.xml
<CustomField>
    <fullName>DirectBookState__c</fullName>
    <label>DirectBook State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>