force-app/main/default/objects/Booking__c/fields/DirectBookStreet__c.field-meta.xml
<CustomField>
    <fullName>DirectBookStreet__c</fullName>
    <label>DirectBook Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>