force-app/main/default/objects/Booking__c/fields/DirectBookTitle__c.field-meta.xml
<CustomField>
    <fullName>DirectBookTitle__c</fullName>
    <label>DirectBook Title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>