force-app/main/default/objects/Booking__c/fields/EnableEnhancedPackageManagement__c.field-meta.xml
<CustomField>
    <fullName>EnableEnhancedPackageManagement__c</fullName>
    <label>For Development Only - Do Not Use</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>