force-app/main/default/objects/Booking__c/fields/FoodBeverageMinimum__c.field-meta.xml
<CustomField>
    <fullName>FoodBeverageMinimum__c</fullName>
    <label>F&amp;B Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>