force-app/main/default/objects/Booking__c/fields/ForecastAverageDailyRate__c.field-meta.xml
<CustomField>
    <fullName>ForecastAverageDailyRate__c</fullName>
    <label>Forecasted ADR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>