force-app/main/default/objects/Booking__c/fields/ForecastEventRevenue10__c.field-meta.xml
<CustomField>
    <fullName>ForecastEventRevenue10__c</fullName>
    <label>Forecast Event Revenue 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>