force-app/main/default/objects/Booking__c/fields/ForecastEventRevenue11__c.field-meta.xml
<CustomField>
    <fullName>ForecastEventRevenue11__c</fullName>
    <label>Forecast Event Revenue 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>