force-app/main/default/objects/Booking__c/fields/ForecastEventRevenue12__c.field-meta.xml
<CustomField>
    <fullName>ForecastEventRevenue12__c</fullName>
    <label>Forecast Event Revenue 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>