force-app/main/default/objects/Booking__c/fields/ForecastEventRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>ForecastEventRevenueTotal__c</fullName>
    <label>Forecasted Event Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>