force-app/main/default/objects/Booking__c/fields/ForecastGuestroomRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>ForecastGuestroomRevenueTotal__c</fullName>
    <label>Forecasted Guestroom Revenue Total</label>
    <description>The sum total of all forecasted guestroom revenues, used to generate forecast reports</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>