force-app/main/default/objects/Booking__c/fields/ForecastMaxAttendance__c.field-meta.xml
<CustomField>
    <fullName>ForecastMaxAttendance__c</fullName>
    <label>Forecasted Max Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>