force-app/main/default/objects/Booking__c/fields/ForecastRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>ForecastRevenueTotal__c</fullName>
    <label>Forecasted Revenue Total</label>
    <description>The sum total of all forecasted event revenues, calculated for each event as the event classification average check for all revenue classifications multiplied by the firmest  attendance value</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>