force-app/main/default/objects/Booking__c/fields/ForecastRoomnightsTotal__c.field-meta.xml
<CustomField>
    <fullName>ForecastRoomnightsTotal__c</fullName>
    <label>Total Roomnights Forecasted</label>
    <description>The sum total of all forecasted guestrooms for the booking</description>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>