force-app/main/default/objects/Booking__c/fields/GroupResumeField1__c.field-meta.xml
<CustomField>
    <fullName>GroupResumeField1__c</fullName>
    <label>Group Profile</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>