force-app/main/default/objects/Booking__c/fields/GroupResumeField2__c.field-meta.xml
<CustomField>
    <fullName>GroupResumeField2__c</fullName>
    <label>Reservations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>