force-app/main/default/objects/Booking__c/fields/GroupResumeField3__c.field-meta.xml
<CustomField>
    <fullName>GroupResumeField3__c</fullName>
    <label>Front Office</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>