force-app/main/default/objects/Booking__c/fields/GuaranteedMaxAttendance__c.field-meta.xml
<CustomField>
    <fullName>GuaranteedMaxAttendance__c</fullName>
    <label>Guaranteed Max Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>