force-app/main/default/objects/Booking__c/fields/GuestAttendance__c.field-meta.xml
<CustomField>
    <fullName>GuestAttendance__c</fullName>
    <label>Guest Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>