force-app/main/default/objects/Booking__c/fields/HideFromPlannerPortal__c.field-meta.xml
<CustomField>
    <fullName>HideFromPlannerPortal__c</fullName>
    <label>Hide from Planner Portal</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>