force-app/main/default/objects/Booking__c/fields/HousingMethodName__c.field-meta.xml
<CustomField>
    <fullName>HousingMethodName__c</fullName>
    <label>Housing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Individual Call-In</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Rooming List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>