force-app/main/default/objects/Booking__c/fields/IsCommissionable__c.field-meta.xml
<CustomField>
    <fullName>IsCommissionable__c</fullName>
    <label>Commissionable</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>