force-app/main/default/objects/Booking__c/fields/IsPickupComplete__c.field-meta.xml
<CustomField>
    <fullName>IsPickupComplete__c</fullName>
    <label>Pickup Complete</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>