force-app/main/default/objects/Booking__c/fields/IsPmsLinked__c.field-meta.xml
<CustomField>
    <fullName>IsPmsLinked__c</fullName>
    <label>Linked to PMS</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>