force-app/main/default/objects/Booking__c/fields/IsTaxExempt__c.field-meta.xml
<CustomField>
    <fullName>IsTaxExempt__c</fullName>
    <label>Tax Exempt</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>