force-app/main/default/objects/Booking__c/fields/LastStatusDate__c.field-meta.xml
<CustomField>
    <fullName>LastStatusDate__c</fullName>
    <label>Last Status Date</label>
    <type>Date</type>
</CustomField>