force-app/main/default/objects/Booking__c/fields/LeadSourceName__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceName__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Convention &amp; Visitors Bureau</fullName>
            </value>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>Destination Management Company</fullName>
            </value>
            <value>
                <fullName>Direct Marketing</fullName>
            </value>
            <value>
                <fullName>Hotel Referral</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>National Sales Office</fullName>
            </value>
            <value>
                <fullName>Personal Office Visit</fullName>
            </value>
            <value>
                <fullName>Repeat Business</fullName>
            </value>
            <value>
                <fullName>Sales Blitz</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Solicitation</fullName>
            </value>
            <value>
                <fullName>Lanyon/Starcite</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Walk In</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>