force-app/main/default/objects/Booking__c/fields/LostComments__c.field-meta.xml
<CustomField>
    <fullName>LostComments__c</fullName>
    <label>Lost Comments</label>
    <description>If the Booking originated from a MeetingBroker RFP, lost comments are sent to MeetingBroker and may be seen by the customer.</description>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>