force-app/main/default/objects/Booking__c/fields/LostToCity__c.field-meta.xml
<CustomField>
    <fullName>LostToCity__c</fullName>
    <label>Lost To City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>