force-app/main/default/objects/Booking__c/fields/LostToCompetitorName__c.field-meta.xml
<CustomField>
    <fullName>LostToCompetitorName__c</fullName>
    <label>Lost to Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>