force-app/main/default/objects/Booking__c/fields/MaterializationPercentage__c.field-meta.xml
<CustomField>
    <fullName>MaterializationPercentage__c</fullName>
    <label>Materialization %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>