force-app/main/default/objects/Booking__c/fields/MbReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>MbReferenceNumber__c</fullName>
    <label>MeetingBroker Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>