force-app/main/default/objects/Booking__c/fields/MbRfpId__c.field-meta.xml
<CustomField>
    <fullName>MbRfpId__c</fullName>
    <label>MeetingBroker RFP ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>