force-app/main/default/objects/Booking__c/fields/MeetingClassName__c.field-meta.xml
<CustomField>
    <fullName>MeetingClassName__c</fullName>
    <label>Meeting Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>