force-app/main/default/objects/Booking__c/fields/NIHRMMigrations_OriginalAdditionalSalesM__c.field-meta.xml
<CustomField>
    <fullName>NIHRMMigrations_OriginalAdditionalSalesM__c</fullName>
    <label>Migrations Original Additional SalesM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>