force-app/main/default/objects/Booking__c/fields/NIHRMMigrations_OriginalCateringManager__c.field-meta.xml
<CustomField>
    <fullName>NIHRMMigrations_OriginalCateringManager__c</fullName>
    <label>Migrations Original Catering Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>