force-app/main/default/objects/Booking__c/fields/NIHRMMigrations_OriginalOtherManager__c.field-meta.xml
<CustomField>
    <fullName>NIHRMMigrations_OriginalOtherManager__c</fullName>
    <label>Migrations Original Other Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>