force-app/main/default/objects/Booking__c/fields/NIHRMMigrations_OriginalOtherSource1__c.field-meta.xml
<CustomField>
    <fullName>NIHRMMigrations_OriginalOtherSource1__c</fullName>
    <label>Migrations Original Other Source 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>