force-app/main/default/objects/Booking__c/fields/NIHRMMigrations_OriginalOtherSource3__c.field-meta.xml
<CustomField>
    <fullName>NIHRMMigrations_OriginalOtherSource3__c</fullName>
    <label>Migrations Original Other Source 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>