force-app/main/default/objects/Booking__c/fields/NIHRMMigrations_OriginalOwner__c.field-meta.xml
<CustomField>
    <fullName>NIHRMMigrations_OriginalOwner__c</fullName>
    <label>Migrations Original Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>