force-app/main/default/objects/Booking__c/fields/NIHRMMigrations_OriginalServiceAssistant__c.field-meta.xml
<CustomField>
    <fullName>NIHRMMigrations_OriginalServiceAssistant__c</fullName>
    <label>Migrations Original Service Assistant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>