force-app/main/default/objects/Booking__c/fields/NIHRMMigrations_OriginalServiceManager__c.field-meta.xml
<CustomField>
    <fullName>NIHRMMigrations_OriginalServiceManager__c</fullName>
    <label>Migrations Original Service Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>