force-app/main/default/objects/Booking__c/fields/OnsiteContact__c.field-meta.xml
<CustomField>
    <fullName>OnsiteContact__c</fullName>
    <label>Onsite Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>OnsiteContact_Booking</relationshipName>
    <relationshipLabel>OnsiteContact (Booking)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>