force-app/main/default/objects/Booking__c/fields/OtherManager__c.field-meta.xml
<CustomField>
    <fullName>OtherManager__c</fullName>
    <label>Other Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OtherManager_Booking</relationshipName>
    <relationshipLabel>OtherManager (Booking)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>