force-app/main/default/objects/Booking__c/fields/OtherSource1__c.field-meta.xml
<CustomField>
    <fullName>OtherSource1__c</fullName>
    <label>Other Source 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OtherSource1_Booking</relationshipName>
    <relationshipLabel>OtherSource1 (Booking)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>