force-app/main/default/objects/Booking__c/fields/OtherSource2__c.field-meta.xml
<CustomField>
    <fullName>OtherSource2__c</fullName>
    <label>Other Source 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OtherSource2_Booking</relationshipName>
    <relationshipLabel>OtherSource2 (Booking)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>