force-app/main/default/objects/Booking__c/fields/OtherSource3__c.field-meta.xml
<CustomField>
    <fullName>OtherSource3__c</fullName>
    <label>Other Source 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OtherSource3_Booking</relationshipName>
    <relationshipLabel>OtherSource3 (Booking)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>