force-app/main/default/objects/Booking__c/fields/OwningUser__c.field-meta.xml
<CustomField>
    <fullName>OwningUser__c</fullName>
    <label>Owning User</label>
    <description>To change the owner, save the booking and then click the Change Owner button.</description>
    <referenceTo>User</referenceTo>
    <relationshipName>OwningUser_Booking</relationshipName>
    <relationshipLabel>OwningUser (Booking)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>