force-app/main/default/objects/Booking__c/fields/PeakRoomnightsAgreed__c.field-meta.xml
<CustomField>
    <fullName>PeakRoomnightsAgreed__c</fullName>
    <label>Peak Roomnights Agreed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>