force-app/main/default/objects/Booking__c/fields/PeakRoomnightsBlocked__c.field-meta.xml
<CustomField>
    <fullName>PeakRoomnightsBlocked__c</fullName>
    <label>Peak Roomnights Blocked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>