force-app/main/default/objects/Booking__c/fields/PeakRoomnightsForecast__c.field-meta.xml
<CustomField>
    <fullName>PeakRoomnightsForecast__c</fullName>
    <label>Peak Roomnights Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>