force-app/main/default/objects/Booking__c/fields/PickupAverageDailyRate__c.field-meta.xml
<CustomField>
    <fullName>PickupAverageDailyRate__c</fullName>
    <label>Pickup ADR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>