force-app/main/default/objects/Booking__c/fields/PickupGuestroomRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>PickupGuestroomRevenueTotal__c</fullName>
    <label>Pickup Guestroom Revenue Total</label>
    <description>The sum total of all picked up guestroom revenues, based on the quantity of guestrooms consumed</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>