force-app/main/default/objects/Booking__c/fields/PickupRoomnightsTotal__c.field-meta.xml
<CustomField>
    <fullName>PickupRoomnightsTotal__c</fullName>
    <label>Total Roomnights Picked Up</label>
    <description>The sum total of all picked up guestrooms for the booking</description>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>