force-app/main/default/objects/Booking__c/fields/PMSGroupId__c.field-meta.xml
<CustomField>
    <fullName>PMSGroupId__c</fullName>
    <label>PMS ID/Group Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>