force-app/main/default/objects/Booking__c/fields/PMSIdIndexed__c.field-meta.xml
<CustomField>
    <fullName>PMSIdIndexed__c</fullName>
    <label>PMS Id Indexed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>