force-app/main/default/objects/Booking__c/fields/PostedRevenue10__c.field-meta.xml
<CustomField>
    <fullName>PostedRevenue10__c</fullName>
    <label>PostedRevenue10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>