force-app/main/default/objects/Booking__c/fields/PostedRevenue11__c.field-meta.xml
<CustomField>
    <fullName>PostedRevenue11__c</fullName>
    <label>PostedRevenue11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>