force-app/main/default/objects/Booking__c/fields/PostedRevenue12__c.field-meta.xml
<CustomField>
    <fullName>PostedRevenue12__c</fullName>
    <label>PostedRevenue12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>