force-app/main/default/objects/Booking__c/fields/ProjectedEventRevenue10__c.field-meta.xml
<CustomField>
    <fullName>ProjectedEventRevenue10__c</fullName>
    <label>Projected Event Revenue 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>