force-app/main/default/objects/Booking__c/fields/ProjectedEventRevenue11__c.field-meta.xml
<CustomField>
    <fullName>ProjectedEventRevenue11__c</fullName>
    <label>Projected Event Revenue 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>