force-app/main/default/objects/Booking__c/fields/ProjectedEventRevenue12__c.field-meta.xml
<CustomField>
    <fullName>ProjectedEventRevenue12__c</fullName>
    <label>Projected Event Revenue 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>