force-app/main/default/objects/Booking__c/fields/ProjectedEventRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>ProjectedEventRevenueTotal__c</fullName>
    <label>Projected Event Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>