force-app/main/default/objects/Booking__c/fields/ProjectedRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>ProjectedRevenueTotal__c</fullName>
    <label>Projected Revenue Total</label>
    <description>The sum total of all projected event revenues, calculated for each event item as the booked quantity multiplied by the item price</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>