force-app/main/default/objects/Booking__c/fields/ProposalCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ProposalCreatedDate__c</fullName>
    <label>Proposal Created Date</label>
    <type>DateTime</type>
</CustomField>