force-app/main/default/objects/Booking__c/fields/ResId__c.field-meta.xml
<CustomField>
    <fullName>ResId__c</fullName>
    <label>Res ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>