force-app/main/default/objects/Booking__c/fields/RevenueType__c.field-meta.xml
<CustomField>
    <fullName>RevenueType__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banquet</fullName>
                <default>true</default>
                <label>Banquet</label>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>In House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>