force-app/main/default/objects/Booking__c/fields/RfpChannel__c.field-meta.xml
<CustomField>
    <fullName>RfpChannel__c</fullName>
    <label>RFP Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>