force-app/main/default/objects/Booking__c/fields/RfpMilestone__c.field-meta.xml
<CustomField>
    <fullName>RfpMilestone__c</fullName>
    <label>RFP Milestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>