force-app/main/default/objects/Booking__c/fields/RfpStatus__c.field-meta.xml
<CustomField>
    <fullName>RfpStatus__c</fullName>
    <label>RFP Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>