force-app/main/default/objects/Booking__c/fields/ServiceAssistant__c.field-meta.xml
<CustomField>
    <fullName>ServiceAssistant__c</fullName>
    <label>Service Assistant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServiceAssistant_Booking</relationshipName>
    <relationshipLabel>ServiceAssistant (Booking)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>