force-app/main/default/objects/Booking__c/fields/ServiceManager__c.field-meta.xml
<CustomField>
    <fullName>ServiceManager__c</fullName>
    <label>Service Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServiceManager_Booking</relationshipName>
    <relationshipLabel>ServiceManager (Booking)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>