force-app/main/default/objects/Booking__c/fields/SourceSystemExternalId__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemExternalId__c</fullName>
    <label>Source System External ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>