force-app/main/default/objects/Booking__c/fields/StatusReasonName__c.field-meta.xml
<CustomField>
    <fullName>StatusReasonName__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Dates Changed</fullName>
            </value>
            <value>
                <fullName>Disaster</fullName>
            </value>
            <value>
                <fullName>Entry Error</fullName>
            </value>
            <value>
                <fullName>Function Space Unavailable</fullName>
            </value>
            <value>
                <fullName>Guest Room Pattern Unacceptable</fullName>
            </value>
            <value>
                <fullName>Guest Rooms Unavailable</fullName>
            </value>
            <value>
                <fullName>Lead Did Not Materialize</fullName>
            </value>
            <value>
                <fullName>No Reason Provided</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Other See Notes</fullName>
            </value>
            <value>
                <fullName>Rates Too High</fullName>
            </value>
            <value>
                <fullName>Selected Another City</fullName>
            </value>
            <value>
                <fullName>Selected Another Facility</fullName>
            </value>
            <value>
                <fullName>Group Size Guestrooms</fullName>
            </value>
            <value>
                <fullName>Group Size Function Space</fullName>
            </value>
            <value>
                <fullName>Contract Terms</fullName>
            </value>
            <value>
                <fullName>Amenities</fullName>
            </value>
            <value>
                <fullName>Renovation</fullName>
            </value>
            <value>
                <fullName>Competitor In-House</fullName>
            </value>
            <value>
                <fullName>Credit Not Approved</fullName>
            </value>
            <value>
                <fullName>Previous Experience</fullName>
            </value>
            <value>
                <fullName>AUTO: Turndown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>