force-app/main/default/objects/Booking__c/fields/TotalAttendees__c.field-meta.xml
<CustomField>
    <fullName>TotalAttendees__c</fullName>
    <label>Total Attendees</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>