force-app/main/default/objects/Booking__c/fields/TotalPostedRevenue__c.field-meta.xml
<CustomField>
    <fullName>TotalPostedRevenue__c</fullName>
    <label>Total Posted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>